# Metal-cpp

./: CMakeLists.txt  README.md
include/metal-cpp/: Metal.hpp
src/: Metal.impl.cpp
